Panier MB addition

--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
@@ -4,7 +4,7 @@
 
 #DEFAULT
 
-welcomePage = Welcome
+welcomePage = Home
 connect = Connect
 basket = Basket
 disconnect = Disconnect
@@ -15,14 +15,11 @@ goDecoCat = Go to the decoration category
 goClothCat = Go to the clothing category
 usernameLabel = Username:
 passwordLabel = Password:
-games = Games
-decoration = Decoration
-clothing = Clothing
 lengthPasswordValidation = Your password must contains between 6 and 25 characters
 inscription = Register here
 goInscription = Go to the register form
 inscription_title = Registration
-formEmail = eMail
+formEmail = Email
 emailRequired = Email required
 formConfirmationEmail = Confirm eMail
 confirmationEmailRequired = Email confirmation required
@@ -30,11 +27,11 @@ emailExistant = Email already in use
 emailIncorrect = Invalid email !
 differentsEmails = Email addresses do not match !
 prenomRequis = First name required
-longueurPrenom = First name must be 2-50 characters
+longueurPrenom = First name must be 2-50 LETTERS
 formNom = Last Name
 formPrenom = First Name
 nomRequis = Last name required
-longueurNom = Last name must be 2-50 characters
+longueurNom = Last name must be 2-50 LETTERS
 formMotDePasse = Password
 motDePasseRequis = Password required
 longueurMotDePasse = Password must be 6-50 characters
@@ -50,7 +47,7 @@ numeroRueRequis = Street number required
 formLocalite = City
 localiteRequis = City required
 localiteCaracteresAutorises = City must be letters (Only - is allowed)
-erreurCodePostal = Invalid post code
+codePostalRequis = Post code required
 formCodePostal = Post code
 formPays = Country
 boutonValider = Confirm
@@ -67,3 +64,34 @@ nomArticleTitreColonne = Name
 prixArticleTitreColonne = Price
 quantiteInvalide = Quantity must be between 1 & 99
 boutonAjoutPanier = Add to cart
+promotionsOfTheMoment = PROMOTIONS
+libelleQuantite = Amount
+titrePanier = Your Cart
+panierVide = Your cart is empty...
+editerCellule = Edit Cell
+articlePanier = Item
+prixArticle = Unit Price
+articleQuantite = Amount
+prixTotalLigne = Total row price
+retirerArticle = Remove Item
+prixTotalPanier = Total cart price
+viderPanier = Empty cart
+commanderPanier = Order
+connexion = Connection
+deconnexion = Disconnect
+titreCommande = Your Order
+totalCommande = Total order price
+adresseLivraisonCommande = Delivery Address
+edition_titre = Edit your informations
+code_promo_input = Promo code
+validerCodePromo = Apply
+promoIncorrecte = Invalid promo code
+promoDejaUtilisee = Promo already in effect
+phoneOrder = Phone Number
+modifyAddressOrder = Edit Address
+commandeReussie = Your order has been saved !
+# -----
+compte = Account
+factures = Invoices
+numeroFacture = Invoice #
+dateFacture = Invoice date
