--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -2,20 +2,95 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-# FRANCAIS
+#DEFAULT
 
 welcomePage = Accueil
-connect = Se connecter
+connect = Connexion
 basket = Panier
-disconnect = Se d\u00e9connecter
-goMainPage = Acc\u00e9der \u00e0 la page principale
-goBasket = Acc\u00e9der \u00e0 votre panier
-goGamesCat = Acc\u00e9der \u00e0 la cat\u00e9gorie Jeux
-goDecoCat = Acc\u00e9der \u00e0 la cat\u00e9gorie D\u00e9coration
-goClothCat = Acc\u00e9der \u00e0 la cat\u00e9gorie V\u00eatements
-usernameLabel = Identifiant:
+disconnect = D\u00e9connexion
+goMainPage = Aller \u00e0 la page d'accueil
+goBasket = Aller au panier
+goGamesCat = Aller \u00e0 la cat\u00e9gorie jeu
+goDecoCat = Aller \u00e0 la cat\u00e9gorie d\u00e9coration
+goClothCat = Aller \u00e0 la cat\u00e9gorie habillement
+usernameLabel = Nom d'utilisateur:
 passwordLabel = Mot de passe:
-games = Jeux
-decoration = D\u00e9coration
-clothing = V\u00eatements
 lengthPasswordValidation = Votre mot de passe doit contenir entre 6 et 25 caract\u00e8res
+inscription = Inscription
+goInscription = S'inscrire
+inscription_title = Enregistrement
+formEmail = Email
+emailRequired = Email requis
+formConfirmationEmail = Confirmer votre eMail
+confirmationEmailRequired = Confirmation de l'eMail requise
+emailExistant = Adresse eMail d\u00e9j\u00e0 utilis\u00e9e
+emailIncorrect = Adresse eMail invalide !
+differentsEmails = Les adresses eMail ne correspondent pas !
+prenomRequis = Pr\u00e9nom requis
+longueurPrenom = Le pr\u00e9nom doit contenir de 2 \u00e0 50 LETTRES
+formNom = Nom de famille
+formPrenom = Pr\u00e9nom
+nomRequis = Nom de famille requis
+longueurNom = Le nom de famille doit contenir de 2 \u00e0 50 LETTRES
+formMotDePasse = Mot de passe
+motDePasseRequis = Mot de passe requis
+longueurMotDePasse = Le mot de passe doit contenir entre 6-50 caract\u00e8res
+formConfirmationMotDePasse = Confirmer le mot de passe
+confirmationMotDePasseRequis = S'il vous pla\u00eet confirmer le mot de passe
+motsDePasseDifferents = Les mots de passe ne correspondent pas
+formNumTelephone = Num\u00e9ro de t\u00e9l\u00e9phone
+erreurNumTelephone = Num\u00e9ro de t\u00e9l\u00e9phone invalide
+formRue = Rue
+rueRequis = Le nom de la rue est requis
+formNumero = Num\u00e9ro
+numeroRueRequis = Le num\u00e9ro est requis
+formLocalite = Ville
+localiteRequis = Ville requise
+localiteCaracteresAutorises = Le nom de la ville ne doit contenir que des lettres (Seulement - est permis)
+codePostalRequis = Code postal requis
+formCodePostal = Code postal
+formPays = Pays
+boutonValider = Confirmer
+connexionTitle = Connection
+erreurConnexion = Identifiant incorrecte, v\u00e9rifiez adresse email et mot de passe
+apropos = A propos
+aProposTitre = A propos de Party Equipment
+aProposTexte = Party Equipment votre fournisseur d'accesoires pour vos soir\u00e9es, d\u00e9corations de soir\u00e9es et habillement de soir\u00e9e! Notre de but est de vous faire d\u00e9couvrir de nouveaux jeux \u00e0 boire et de vous fournir un \u00e9quipement pour que vos soir\u00e9es assurent!
+nousContacter = Contactez nous
+inscriptionReussie = Inscription r\u00e9ussie!
+titreErreur404 = Oops! Quelque chose s'est mal d\u00e9roul\u00e9...
+descriptionErreur404 = LA page n'a pu \u00eatre trouv\u00e9e (Erreur 404)
+nomArticleTitreColonne = Nom de l'article
+prixArticleTitreColonne = Prix
+quantiteInvalide = La quantit\u00e9 doit \u00eatre comprise en 1 et 99
+boutonAjoutPanier = Ajouter au panir
+promotionsOfTheMoment = PROMOTIONS
+libelleQuantite = Quantit\u00e9
+titrePanier = Votre caddie
+panierVide = Ooh, votre caddie est vide :( ...
+editerCellule = Editez votre cellule
+articlePanier = Article
+prixArticle = Prix unitaire
+articleQuantite = Total
+prixTotalLigne = Prix total de la rang\u00e9e
+retirerArticle = Retirer l'article
+prixTotalPanier = Prix total du panier
+viderPanier = Panier vide
+commanderPanier = Commander
+connexion = Connexion
+deconnexion = D\u00e9connexion
+titreCommande = Votre commande
+totalCommande = Prix total de votre commande
+adresseLivraisonCommande = Adresse de livraison
+edition_titre = Editez vos informations
+code_promo_input = Code promo
+validerCodePromo = Valider code promo
+promoIncorrecte = Code promo invalide
+promoDejaUtilisee = Code promo d\u00e9j\u00e0 utilis\u00e9
+phoneOrder = Num\u00e9ro t\u00e9l\u00e9phone
+modifyAddressOrder = \u00c9diter adresse
+commandeReussie = Votre commande a \u00e9t\u00e9 pass\u00e9e !
+compte = Compte
+factures = Factures
+numeroFacture = Facture #
+dateFacture = Date de facturation
