--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -63,7 +63,7 @@ descriptionErreur404 = LA page n'a pu \u00eatre trouv\u00e9e (Erreur 404)
 nomArticleTitreColonne = Nom de l'article
 prixArticleTitreColonne = Prix
 quantiteInvalide = La quantit\u00e9 doit \u00eatre comprise en 1 et 99
-boutonAjoutPanier = Ajouter au panir
+boutonAjoutPanier = Ajouter au panier
 promotionsOfTheMoment = PROMOTIONS
 libelleQuantite = Quantit\u00e9
 titrePanier = Votre caddie
