Design template review

--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
@@ -90,8 +90,9 @@ promoDejaUtilisee = Promo already in effect
 phoneOrder = Phone Number
 modifyAddressOrder = Edit Address
 commandeReussie = Your order has been saved !
-# -----
 compte = Account
 factures = Invoices
 numeroFacture = Invoice #
 dateFacture = Invoice date
+titreCategories = Categories
+languesTitre = Languages
