--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -51,7 +51,7 @@ codePostalRequis = Code postal requis
 formCodePostal = Code postal
 formPays = Pays
 boutonValider = Confirmer
-connexionTitle = Connection
+connexionTitle = Connexion
 erreurConnexion = Identifiant incorrecte, v\u00e9rifiez adresse email et mot de passe
 apropos = A propos
 aProposTitre = A propos de Party Equipment
@@ -94,3 +94,4 @@ compte = Compte
 factures = Factures
 numeroFacture = Facture #
 dateFacture = Date de facturation
+titreCategories = Cat\u00e9gories
