Client inscription form design review for bootstrap

--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
@@ -95,4 +95,4 @@ factures = Invoices
 numeroFacture = Invoice #
 dateFacture = Invoice date
 titreCategories = Categories
-languesTitre = Languages
+languesTitre = Language
