--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -95,3 +95,4 @@ factures = Factures
 numeroFacture = Facture #
 dateFacture = Date de facturation
 titreCategories = Cat\u00e9gories
+languesTitre = Langue
