--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
@@ -93,3 +93,4 @@ factures = Facturen
 numeroFacture = Factuur #
 dateFacture = Factuurdatum
 titreCategories = Categorie\u00ebn
+languesTitre = Taal
