Use of first name for successfull registration

--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -57,7 +57,7 @@ apropos = A propos
 aProposTitre = A propos de Party Equipment
 aProposTexte = Party Equipment votre fournisseur d'accesoires pour vos soir\u00e9es, d\u00e9corations de soir\u00e9es et habillement de soir\u00e9e! Notre de but est de vous faire d\u00e9couvrir de nouveaux jeux \u00e0 boire et de vous fournir un \u00e9quipement pour que vos soir\u00e9es assurent!
 nousContacter = Contactez nous
-inscriptionReussie = Inscription r\u00e9ussie!
+inscriptionReussie = votre inscription a bien \u00e9t\u00e9 effectu\u00e9e !
 titreErreur404 = Oops! Quelque chose s'est mal d\u00e9roul\u00e9...
 descriptionErreur404 = LA page n'a pu \u00eatre trouv\u00e9e (Erreur 404)
 nomArticleTitreColonne = Nom de l'article
