--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -87,6 +87,7 @@ code_promo_input = Code promo
 validerCodePromo = Valider code promo
 promoIncorrecte = Code promo invalide
 promoDejaUtilisee = Code promo d\u00e9j\u00e0 utilis\u00e9
+articleNonPresent = L'article concern\u00e9 par ce code promo n'est pas dans votre panier
 phoneOrder = Num\u00e9ro t\u00e9l\u00e9phone
 modifyAddressOrder = \u00c9diter adresse
 commandeReussie = Votre commande a \u00e9t\u00e9 pass\u00e9e !
