--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_en.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_en.properties
@@ -87,6 +87,7 @@ code_promo_input = Promo code
 validerCodePromo = Apply
 promoIncorrecte = Invalid promo code
 promoDejaUtilisee = Promo already in effect
+articleNonPresent = The article concerned by this promo code is not in your basket
 phoneOrder = Phone Number
 modifyAddressOrder = Edit Address
 commandeReussie = Your order has been saved !
