--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
@@ -85,6 +85,9 @@ adresseLivraisonCommande = Afleveradres
 edition_titre = Bewerk uw informatie
 code_promo_input = Promo code
 validerCodePromo = Toepassen
+promoIncorrecte = Code promo invalide
+promoDejaUtilisee = Code promo d\u00e9j\u00e0 utilis\u00e9
+articleNonPresent = Het artikel die tot deze promocode behoort is niet in uw mand
 phoneOrder = Telefoonnummer
 modifyAddressOrder = Adres veranderen
 commandeReussie = Uw bestelling is geslaagd !
