Deutch word "maand" changed in "mand"

--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
@@ -63,19 +63,19 @@ descriptionErreur404 = Het pagina kon niet gevonden zijn (Error 404)
 nomArticleTitreColonne = Naam
 prixArticleTitreColonne = Prijs
 quantiteInvalide = Hoeveelheid moet tussen 1 en 99 zijn
-boutonAjoutPanier = Voeg aan de maand toe
+boutonAjoutPanier = Voeg aan de mand toe
 promotionsOfTheMoment = PROMOTIES
 libelleQuantite = Hoeveelheid
-titrePanier = Uw maand
-panierVide = Uw maand is leeg...
+titrePanier = Uw mand
+panierVide = Uw mand is leeg...
 editerCellule = Bewerk cel
 articlePanier = Artikel
 prixArticle = Eenheidprijs
 articleQuantite = Hoeveelheid
 prixTotalLigne = Totaal lijn prijs
 retirerArticle = Artikel verwijderen
-prixTotalPanier = Totaal maand prijs
-viderPanier = Leeg maand
+prixTotalPanier = Totaal mand prijs
+viderPanier = Leeg mand
 commanderPanier = Bestellen
 connexion = Connectie
 deconnexion = Afsluiten
