Menu labels for client actions

--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
@@ -97,3 +97,9 @@ numeroFacture = Invoice #
 dateFacture = Invoice date
 titreCategories = Categories
 languesTitre = Language
+editerInformations = Edit my informations
+editerAdresse = Edit my address
+editerPassword = Edit my password
+supprimerCompte = Delete my account
+mesFactures = My invoices
+monCompte = My Account
