--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -97,3 +97,9 @@ numeroFacture = Facture #
 dateFacture = Date de facturation
 titreCategories = Cat\u00e9gories
 languesTitre = Langue
+editerInformations = \u00c9diter mes informations
+editerAdresse = \u00c9diter mon adresse
+editerPassword = \u00c9diter mon mot de passe
+supprimerCompte = Supprimer mon compte
+mesFactures = Mes factures
+monCompte = Mon Compte
