--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
@@ -97,3 +97,9 @@ numeroFacture = Factuur #
 dateFacture = Factuurdatum
 titreCategories = Categorie\u00ebn
 languesTitre = Taal
+editerInformations = Bewerk mijn informatie
+editerAdresse = Bewerk mijn adres
+editerPassword = Wachtwoord wijzigen
+supprimerCompte = Verwijder mijn account
+mesFactures = Mijn facturen
+monCompte = Mijn Account
