Client action page

--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
@@ -81,15 +81,12 @@ connexion = Connection
 deconnexion = Disconnect
 titreCommande = Your Order
 totalCommande = Total order price
-adresseLivraisonCommande = Delivery Address
-edition_titre = Edit your informations
 code_promo_input = Promo code
 validerCodePromo = Apply
 promoIncorrecte = Invalid promo code
 promoDejaUtilisee = Promo already in effect
 articleNonPresent = The article concerned by this promo code is not in your basket
 phoneOrder = Phone Number
-modifyAddressOrder = Edit Address
 commandeReussie = Your order has been saved !
 compte = Account
 factures = Invoices
@@ -103,3 +100,6 @@ editerPassword = Edit my password
 supprimerCompte = Delete my account
 mesFactures = My invoices
 monCompte = My Account
+mesInformations = My Informations
+monAdresse = My Address
+confirmSuppressionCompte = Are you sure you want delete your account ?
