--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
@@ -81,15 +81,12 @@ connexion = Connectie
 deconnexion = Afsluiten
 titreCommande = UW bestelling
 totalCommande = Totaal bestelling prijs
-adresseLivraisonCommande = Afleveradres
-edition_titre = Bewerk uw informatie
 code_promo_input = Promo code
 validerCodePromo = Toepassen
 promoIncorrecte = Code promo invalide
 promoDejaUtilisee = Code promo d\u00e9j\u00e0 utilis\u00e9
 articleNonPresent = Het artikel die tot deze promocode behoort is niet in uw mand
 phoneOrder = Telefoonnummer
-modifyAddressOrder = Adres veranderen
 commandeReussie = Uw bestelling is geslaagd !
 compte = Rekening
 factures = Facturen
@@ -103,3 +100,6 @@ editerPassword = Wachtwoord wijzigen
 supprimerCompte = Verwijder mijn account
 mesFactures = Mijn facturen
 monCompte = Mijn Account
+mesInformations = Mijn Informatie
+monAdresse = Mijn Adres
+confirmSuppressionCompte = Wilt u uw account verwijderen?
