--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -81,15 +81,12 @@ connexion = Connexion
 deconnexion = D\u00e9connexion
 titreCommande = Votre commande
 totalCommande = Prix total de votre commande
-adresseLivraisonCommande = Adresse de livraison
-edition_titre = Editez vos informations
 code_promo_input = Code promo
 validerCodePromo = Valider code promo
 promoIncorrecte = Code promo invalide
 promoDejaUtilisee = Code promo d\u00e9j\u00e0 utilis\u00e9
 articleNonPresent = L'article concern\u00e9 par ce code promo n'est pas dans votre panier
 phoneOrder = Num\u00e9ro t\u00e9l\u00e9phone
-modifyAddressOrder = \u00c9diter adresse
 commandeReussie = Votre commande a \u00e9t\u00e9 pass\u00e9e !
 compte = Compte
 factures = Factures
@@ -103,3 +100,6 @@ editerPassword = \u00c9diter mon mot de passe
 supprimerCompte = Supprimer mon compte
 mesFactures = Mes factures
 monCompte = Mon Compte
+mesInformations = Mes Informations
+monAdresse = Mon Adresse
+confirmSuppressionCompte = \u00cates vous s\u00fbr de vouloir supprimer votre compte ?
