Address and customer information edition forms

--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
@@ -103,3 +103,5 @@ monCompte = My Account
 mesInformations = My Informations
 monAdresse = My Address
 confirmSuppressionCompte = Are you sure you want delete your account ?
+enterYourPasswor = Enter Password
+annuler = Cancel
