--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -103,3 +103,5 @@ monCompte = Mon Compte
 mesInformations = Mes Informations
 monAdresse = Mon Adresse
 confirmSuppressionCompte = \u00cates vous s\u00fbr de vouloir supprimer votre compte ?
+enterYourPasswor = Entrer mot de passe
+annuler = Annuler
