--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
@@ -83,8 +83,8 @@ titreCommande = UW bestelling
 totalCommande = Totaal bestelling prijs
 code_promo_input = Promo code
 validerCodePromo = Toepassen
-promoIncorrecte = Code promo invalide
-promoDejaUtilisee = Code promo d\u00e9j\u00e0 utilis\u00e9
+promoIncorrecte = Ongeldige promotiecode
+promoDejaUtilisee = Promotiecode al gebruikt
 articleNonPresent = Het artikel die tot deze promocode behoort is niet in uw mand
 phoneOrder = Telefoonnummer
 commandeReussie = Uw bestelling is geslaagd !
@@ -103,3 +103,5 @@ monCompte = Mijn Account
 mesInformations = Mijn Informatie
 monAdresse = Mijn Adres
 confirmSuppressionCompte = Wilt u uw account verwijderen?
+enterYourPasswor = Entrer mot de passe
+annuler = Annuleren
