--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang.properties
@@ -64,7 +64,7 @@ nomArticleTitreColonne = Name
 prixArticleTitreColonne = Price
 quantiteInvalide = Quantity must be between 1 & 99
 boutonAjoutPanier = Add to cart
-promotionsOfTheMoment = PROMOTIONS
+promotionsOfTheMoment = Promotions
 libelleQuantite = Amount
 titrePanier = Your Cart
 panierVide = Your cart is empty...
@@ -105,3 +105,5 @@ monAdresse = My Address
 confirmSuppressionCompte = Are you sure you want delete your account ?
 enterYourPasswor = Enter Password
 annuler = Cancel
+facture = Invoice #
+noFactures = You don't have any invoice yet
