--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -64,7 +64,7 @@ nomArticleTitreColonne = Nom de l'article
 prixArticleTitreColonne = Prix
 quantiteInvalide = La quantit\u00e9 doit \u00eatre comprise en 1 et 99
 boutonAjoutPanier = Ajouter au panier
-promotionsOfTheMoment = PROMOTIONS
+promotionsOfTheMoment = Promotions
 libelleQuantite = Quantit\u00e9
 titrePanier = Votre caddie
 panierVide = Ooh, votre caddie est vide :( ...
@@ -105,3 +105,5 @@ monAdresse = Mon Adresse
 confirmSuppressionCompte = \u00cates vous s\u00fbr de vouloir supprimer votre compte ?
 enterYourPasswor = Entrer mot de passe
 annuler = Annuler
+facture = Facture #
+noFactures = Vous n'aves pas encore de factures
