--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
@@ -64,7 +64,7 @@ nomArticleTitreColonne = Naam
 prixArticleTitreColonne = Prijs
 quantiteInvalide = Hoeveelheid moet tussen 1 en 99 zijn
 boutonAjoutPanier = Voeg aan de mand toe
-promotionsOfTheMoment = PROMOTIES
+promotionsOfTheMoment = Promoties
 libelleQuantite = Hoeveelheid
 titrePanier = Uw mand
 panierVide = Uw mand is leeg...
@@ -105,3 +105,5 @@ monAdresse = Mijn Adres
 confirmSuppressionCompte = Wilt u uw account verwijderen?
 enterYourPasswor = Entrer mot de passe
 annuler = Annuleren
+facture = Factuur #
+noFactures = U heeft nog geen factuur
