--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -72,7 +72,7 @@ editerCellule = Editez votre cellule
 articlePanier = Article
 prixArticle = Prix unitaire
 articleQuantite = Total
-prixTotalLigne = Prix total de la rang\u00e9e
+prixTotalLigne = Prix total de la ligne
 retirerArticle = Retirer l'article
 prixTotalPanier = Prix total du panier
 viderPanier = Panier vide
