--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_fr.properties
@@ -107,3 +107,6 @@ enterYourPasswor = Entrer mot de passe
 annuler = Annuler
 facture = Facture #
 noFactures = Vous n'aves pas encore de factures
+newPassword = Nouveau mot de passe
+oldPassword = Ancien mot de passe
+mdpChangeSuccess = Mot de passe chang\u00e9 avec succ\u00e8s
