--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_nl.properties
@@ -107,3 +107,6 @@ enterYourPasswor = Entrer mot de passe
 annuler = Annuleren
 facture = Factuur #
 noFactures = U heeft nog geen factuur
+newPassword = Nieuwe wachtwoord
+oldPassword = Oude wachtwoord
+mdpChangeSuccess = Wachtwoord succesvol gewijzigd
