--- a/web-party-equipment/web-party-equipment-war/src/java/language/lang_en.properties
+++ b/web-party-equipment/web-party-equipment-war/src/java/language/lang_en.properties
@@ -107,3 +107,6 @@ enterYourPasswor = Enter Password
 annuler = Cancel
 facture = Invoice #
 noFactures = You don't have any invoice yet
+newPassword = New Password
+oldPassword = Old Password
+mdpChangeSuccess = You have successfully changed your password
